--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15",
-    "react-calendar": "^10"
+    "next": "14.2.15"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -22,6 +21,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+     "react-calendar": "^5"
   }
 }
